--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@ body {
 	color: #fff;
 }
 
-.image-button:focus {
-	outline: none;
-}
-
 #search-bar {
 	padding: 10px;
 	width: 300px;
@@ -23,6 +19,7 @@ body {
 	margin: 10px;
 	border: none;
 	border-radius: 5px;
+  cursor: pointer;
 	box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 	background-color: #333;
 }
@@ -31,12 +28,14 @@ body {
 	display: block;
 	width: 100%;
 	height: auto;
+  cursor: pointer;
 	border-radius: 5px;
 }
 
 .image-button p {
 	margin: 0;
 	padding: 10px;
+  cursor: pointer;
 	text-align: center;
 	background-color: #444;
 	color: #fff;
