--- a/style.css
+++ b/style.css
@@ -25,11 +25,12 @@ body {
 }
 
 .image-button img {
-	display: block;
-	width: 100%;
-	height: auto;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   cursor: pointer;
-	border-radius: 5px;
+  border-radius: 5px;
 }
 
 .image-button p {
