--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 body {
-    text-align: center;
-    background-color: #222;
-    color: #fff;
+  text-align: center;
+  background-color: #222;
+  color: #fff;
 }
 
 #search-bar {
-    padding: 10px;
-    width: 300px;
-    border-radius: 5px;
-    border: none;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    background-color: #444;
-    color: #fff;
+  padding: 10px;
+  width: 300px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  background-color: #444;
+  color: #fff;
 }
 
 .image-button {
@@ -29,24 +29,24 @@ body {
 }
 
 .image-button img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 .image-button p {
-    margin: 0;
-    padding: 10px;
-    cursor: pointer;
-    text-align: center;
-    background-color: #444;
-    color: #fff;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+  margin: 0;
+  padding: 10px;
+  cursor: pointer;
+  text-align: center;
+  background-color: #444;
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
