--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
     color: #fff;
 }
 
+footer {
+  font-family: Arial, sans-serif;
+}
+
 #search-bar {
     padding: 10px;
     width: 300px;
