--- a/style.css
+++ b/style.css
@@ -18,35 +18,6 @@ footer {
   color: #333;
 }
 
-		/* styles for the game section */
-.games {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-  padding: 50px 0;
-  background-color: #fff;
-  color: #333;
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.game {
-  margin: 20px;
-}
-
-.game img {
-  max-width: 300px;
-  max-height: 300px;
-  margin-bottom: 10px;
-}
-
-.game p {
-  margin: 0;
-}
-
 #search-bar {
     padding: 10px;
     width: 300px;
@@ -55,4 +26,42 @@ footer {
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     background-color: #444;
     color: #fff;
+}
+
+
+.image-button {
+  display: inline-block;
+  margin: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  background-color: #333;
+  position: relative;
+  overflow: hidden;
+  width: 250px; /* change this to your desired width */
+  height: 250px; /* change this to your desired height */
+}
+
+.image-button img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.image-button p {
+    margin: 0;
+    padding: 10px;
+    cursor: pointer;
+    text-align: center;
+    background-color: #444;
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
